# flitenv

./: .gitignore  README.md  Taskfile.yml  pyproject.toml
flitenv/: __init__.py  _cli.py  _constants.py  _core.py  _deps_manager.py  _meta.py  _venv.py  _venvs.py
flitenv/commands/: __init__.py  _base.py  _deps.py  _install.py  _lock.py  _run.py  _version.py
tests/: conftest.py  test_install.py  test_lock.py
