[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "flitenv"
license = "MIT"
author = "Gram"
author-email = "gram@orsinium.dev"
home-page = "https://github.com/orsinium-labs/flitenv"
description-file = "README.md"
requires-python = ">=3.6"
keywords = "flit,venv"

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires = [
    "flit",
    "pip-tools",
    "toml",
]

[tool.flit.metadata.requires-extra]
lint = [
    "flake8",
    "isort",
    "mypy",
    "types-toml",
]
test = [
    "pytest",
]

[tool.flit.scripts]
flitenv = "flitenv:entrypoint"

[tool.isort]
profile = "django"
lines_after_imports = 2
skip = ".venvs/"
