[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "flitenv"
license = "MIT"
author = "Gram"
author-email = "gram@orsinium.dev"
home-page = "https://github.com/orsinium-labs/flitenv"
description-file = "README.md"
requires-python = ">=3.6"
keywords = "flit,venv"

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

requires = [
    "flit",
    "pip-tools",
    "toml",
]

[tool.flit.metadata.requires-extra]
lint = [
    "flake8",
    "isort",
    "mypy",
    "types-toml",
    "ruff",
]
test = [
    "pytest",
]

[tool.flit.scripts]
flitenv = "flitenv:entrypoint"

[tool.isort]
profile = "django"
lines_after_imports = 2
skip = ".venvs/"

[tool.mypy]
files = ["flitenv", "tests"]
python_version = "3.8"
ignore_missing_imports = true
# follow_imports = "silent"
show_error_codes = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
select = [
    "E", "W", "F", "N", "B",
    "COM", "ISC", "PIE", "Q",
    "SIM", "PTH", "PL", "RUF",
]
ignore = [
    "PLR2004",  # allow hardcoded constants
    "SIM117",   # allow nested with
    "SIM105",   # allow try-except-pass
    "PIE790",   # allow unnecessary pass statements
]
target-version = "py38"

[tool.ruff.flake8-quotes]
inline-quotes = "single"
